--- a/App/Eventos/Pages/LoginPage.xaml
+++ b/App/Eventos/Pages/LoginPage.xaml
@@ -530,7 +530,7 @@
             <Button
                 Background="Transparent"
                 BackgroundColor="Transparent"
-                Command="{Binding ResendCodeCommand}"
+                Command="{Binding ResendCodeRecoveryCommand}"
                 HorizontalOptions="Center"
                 IsEnabled="{Binding IsActiveSendCode}"
                 Text="Reenviar código"
