--- a/App/Eventos/Pages/AddEventPage.xaml
+++ b/App/Eventos/Pages/AddEventPage.xaml
@@ -17,53 +17,116 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <ScrollView>
-        <StackLayout Padding="20" Spacing="15">
-
+    <StackLayout BackgroundColor="White">
+        <Border
+            Padding="20"
+            BackgroundColor="#184159"
+            Stroke="#184159"
+            StrokeThickness="1">
+            <Border.StrokeShape>
+                <RoundRectangle CornerRadius="0,0,30,30" />
+            </Border.StrokeShape>
+            <Image Source="recuerdame_white.svg" />
+        </Border>
+        <StackLayout Margin="20" Spacing="15">
             <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
             <StackLayout IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}">
+
+                <Label
+                    Margin="0,0,0,20"
+                    FontSize="Title"
+                    Text="Crear nuevo evento"
+                    TextColor="#D2E898" />
+
                 <!--  Título del evento  -->
-                <Label FontSize="Medium" Text="Título" />
-                <Entry Placeholder="Ingrese el título del evento" Text="{Binding Title}" />
+                <Label
+                    FontSize="Medium"
+                    Text="Título"
+                    TextColor="#184159" />
+                <Entry
+                    Placeholder="Ingrese el título del evento"
+                    PlaceholderColor="#666666"
+                    Text="{Binding Title}" />
 
                 <!--  Descripción del evento  -->
-                <Label FontSize="Medium" Text="Descripción" />
+                <Label
+                    FontSize="Medium"
+                    Text="Descripción"
+                    TextColor="#184159" />
                 <Editor
                     HeightRequest="90"
                     Placeholder="Ingrese la descripción del evento"
+                    PlaceholderColor="#666666"
                     Text="{Binding Description}" />
 
                 <!--  Url del evento  -->
-                <Label FontSize="Medium" Text="Url" />
-                <Entry Placeholder="Ingrese la Url del evento" Text="{Binding Url}" />
+                <Label
+                    FontSize="Medium"
+                    Text="Url"
+                    TextColor="#184159" />
+                <Entry
+                    Placeholder="Ingrese la Url del evento"
+                    PlaceholderColor="#666666"
+                    Text="{Binding Url}" />
 
                 <!--  Fecha del evento  -->
-                <Label FontSize="Medium" Text="Fecha" />
-                <DatePicker Date="{Binding Date}" Format="dd/MM/yyyy" />
+                <Label
+                    FontSize="Medium"
+                    Text="Fecha"
+                    TextColor="#184159" />
+                <DatePicker
+                    Date="{Binding Date}"
+                    Format="dd/MM/yyyy"
+                    TextColor="#666666" />
 
                 <!--  Zona horaria del evento  -->
-                <Label FontSize="Medium" Text="Zona Horaria" />
+                <Label
+                    FontSize="Medium"
+                    Text="Zona Horaria"
+                    TextColor="#184159" />
                 <Picker
                     Title="Seleccione una zona horaria"
                     ItemsSource="{Binding Zones}"
-                    SelectedItem="{Binding SelectedZone}" />
+                    SelectedItem="{Binding SelectedZone}"
+                    TitleColor="#666666" />
+                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Spacing="70">
+                    <StackLayout>
+                        <!--  Hora de inicio del evento  -->
+                        <Label
+                            FontSize="Medium"
+                            Text="Hora de inicio"
+                            TextColor="#184159" />
+                        <TimePicker TextColor="#666666" Time="{Binding StartTime}" />
+                    </StackLayout>
+                    <StackLayout>
+                        <!--  Hora de fin del evento  -->
+                        <Label
+                            FontSize="Medium"
+                            Text="Hora de fin"
+                            TextColor="#184159" />
+                        <TimePicker TextColor="#666666" Time="{Binding EndTime}" />
+                    </StackLayout>
+                </StackLayout>
 
-                <!--  Hora de inicio del evento  -->
-                <Label FontSize="Medium" Text="Hora de inicio" />
-                <TimePicker Time="{Binding StartTime}" />
-
-                <!--  Hora de fin del evento  -->
-                <Label FontSize="Medium" Text="Hora de fin" />
-                <TimePicker Time="{Binding EndTime}" />
 
                 <!--  Botón para agregar el evento  -->
 
                 <Button
+                    Margin="0,40,0,10"
+                    BackgroundColor="#419387"
                     Command="{Binding AddEventCommand}"
-                    Text="Agregar Evento"
-                    TextColor="Black" />
+                    CornerRadius="20"
+                    Text="Guardar evento"
+                    TextColor="White" />
+
+                <Button
+                    BackgroundColor="#D2E898"
+                    Command="{Binding AddEventCommand}"
+                    CornerRadius="20"
+                    Text="Volver"
+                    TextColor="#205048" />
             </StackLayout>
         </StackLayout>
-    </ScrollView>
+    </StackLayout>
 
 </pages:BaseContentPage>
