--- a/App/Eventos/AppShell.xaml
+++ b/App/Eventos/AppShell.xaml
@@ -7,11 +7,11 @@
     xmlns:pages="clr-namespace:Eventos.Pages"
     FlyoutHeaderBehavior="CollapseOnScroll"
     Shell.FlyoutBehavior="Disabled"
-    Shell.TabBarIsVisible="True"
     Shell.TabBarBackgroundColor="#184159"
     Shell.TabBarForegroundColor="#D2E898"
-    Shell.TabBarUnselectedColor="#FFFFFF"
-    Shell.TabBarTitleColor="#D2E898">
+    Shell.TabBarIsVisible="True"
+    Shell.TabBarTitleColor="#D2E898"
+    Shell.TabBarUnselectedColor="#FFFFFF">
 
     <TabBar>
         <Tab Title="Inicio" Icon="home.svg">
@@ -28,10 +28,15 @@
         </Tab>
     </TabBar>
 
-
     <ShellContent
         Title="Login"
         ContentTemplate="{DataTemplate pages:LoginPage}"
         Route="LoginPage" />
+
+    <ShellContent
+        Title="EventDetail"
+        ContentTemplate="{DataTemplate pages:EventDetailPage}"
+        Route="EventDetailPage"
+        Shell.TabBarIsVisible="False" />
 
 </Shell>
