--- a/App/Eventos/Pages/EventDetailPage.xaml
+++ b/App/Eventos/Pages/EventDetailPage.xaml
@@ -4,12 +4,257 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:extensions="clr-namespace:Eventos.Extensions"
+    xmlns:local="clr-namespace:Eventos.Converters"
     xmlns:pages="clr-namespace:Eventos.Common.Pages;assembly=Eventos.Common"
     xmlns:viewModels="clr-namespace:Eventos.ViewModels"
     x:DataType="viewModels:EventDetailViewModel"
     x:TypeArguments="viewModels:EventDetailViewModel"
-    Shell.NavBarIsVisible="false">
+    Shell.NavBarIsVisible="False"
+    Shell.PresentationMode="Animated"
+    Shell.TabBarIsVisible="True">
 
-    <StackLayout />
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+            <local:IsoDateToFormattedDateConverter x:Key="IsoDateToFormattedDateConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
+    <StackLayout BackgroundColor="White">
+        <Border
+            Padding="20"
+            BackgroundColor="#184159"
+            Stroke="#184159"
+            StrokeThickness="1">
+            <Border.StrokeShape>
+                <RoundRectangle CornerRadius="0,0,30,30" />
+            </Border.StrokeShape>
+            <Image Source="recuerdame_white.svg" />
+        </Border>
+
+        <StackLayout
+            Margin="20,20,20,0"
+            IsVisible="{Binding UpdateView, Converter={StaticResource InvertedBoolConverter}}"
+            VerticalOptions="FillAndExpand">
+            <StackLayout
+                Margin="0"
+                Padding="0"
+                Orientation="Horizontal">
+                <Label
+                    Margin="0,0,0,20"
+                    FontSize="24"
+                    Text="Detalles del evento"
+                    TextColor="#D2E898" />
+                <ImageButton
+                    Margin="0,0,0,0"
+                    Padding="10"
+                    BackgroundColor="#D2E898"
+                    Command="{Binding ActiveUpdateEventCommand}"
+                    CornerRadius="100"
+                    HeightRequest="40"
+                    HorizontalOptions="EndAndExpand"
+                    Source="pen.svg"
+                    WidthRequest="40" />
+            </StackLayout>
+
+            <Label
+                FontSize="16"
+                Text="Titulo"
+                TextColor="#184159" />
+            <Label
+                Margin="0,0,0,20"
+                Text="{Binding EventItem.Title}"
+                TextColor="#666666" />
+            <Label
+                FontSize="16"
+                Text="Descripción"
+                TextColor="#184159" />
+            <Label
+                Margin="0,0,0,20"
+                Text="{Binding EventItem.Description}"
+                TextColor="#666666" />
+            <Label
+                FontSize="16"
+                Text="URL"
+                TextColor="#184159" />
+            <Label
+                Margin="0,0,0,20"
+                Text="{Binding EventItem.URLFile}"
+                TextColor="#666666" />
+            <Label
+                FontSize="16"
+                Text="Fecha"
+                TextColor="#184159" />
+            <Label
+                Margin="0,0,0,20"
+                Text="{Binding EventItem.Date, StringFormat='{0:dd/MM/yyyy}'}"
+                TextColor="#666666" />
+            <Label
+                FontSize="16"
+                Text="Zona horaria"
+                TextColor="#184159" />
+            <Label
+                Margin="0,0,0,20"
+                Text="{Binding EventItem.Zone}"
+                TextColor="#666666" />
+            <StackLayout Orientation="Horizontal" Spacing="60">
+                <StackLayout>
+                    <Label
+                        FontSize="16"
+                        Text="Hora de inicio"
+                        TextColor="#184159" />
+                    <Label
+                        Margin="0,0,0,20"
+                        Text="{Binding EventItem.StartTime, Converter={StaticResource IsoDateToFormattedDateConverter}}"
+                        TextColor="#666666" />
+                </StackLayout>
+                <StackLayout>
+                    <Label
+                        FontSize="16"
+                        Text="Hora de fin"
+                        TextColor="#184159" />
+                    <Label
+                        Margin="0,0,0,20"
+                        Text="{Binding EventItem.EndTime, Converter={StaticResource IsoDateToFormattedDateConverter}}"
+                        TextColor="#666666" />
+                </StackLayout>
+
+            </StackLayout>
+
+            <Label
+                FontSize="16"
+                Text="Cantidad de clicks"
+                TextColor="#184159" />
+            <Label
+                Margin="0,0,0,20"
+                Text="{Binding EventItem.Count}"
+                TextColor="#666666" />
+            <StackLayout
+                Margin="0,0,0,20"
+                Orientation="Horizontal"
+                Spacing="20"
+                VerticalOptions="EndAndExpand">
+                <Button
+                    Margin="0,10,0,10"
+                    BackgroundColor="#D2E898"
+                    Clicked="Button_Clicked"
+                    CornerRadius="20"
+                    HorizontalOptions="FillAndExpand"
+                    Text="Volver"
+                    TextColor="#184159" />
+                <ImageButton
+                    Margin="0,10,0,10"
+                    Padding="6"
+                    BackgroundColor="#D2E898"
+                    Clicked="Button_Clicked_Delete"
+                    CommandParameter="delete"
+                    CornerRadius="100"
+                    HeightRequest="40"
+                    Source="trash.svg"
+                    WidthRequest="60" />
+            </StackLayout>
+
+        </StackLayout>
+
+        <StackLayout
+            VerticalOptions="FillAndExpand"
+            Margin="20"
+            IsVisible="{Binding UpdateView}"
+            Spacing="15">
+            <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
+            <StackLayout IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}" VerticalOptions="FillAndExpand">
+
+                <Label
+                    Margin="0,0,0,20"
+                    FontSize="Title"
+                    Text="Detalles del evento"
+                    TextColor="#D2E898" />
+
+                <!--  Título del evento  -->
+                <Label
+                    FontSize="Medium"
+                    Text="Título"
+                    TextColor="#184159" />
+                <Entry
+                    Placeholder="Ingrese el título del evento"
+                    PlaceholderColor="#666666"
+                    Text="{Binding UpdatedEventItem.Title, Mode=TwoWay}"
+                    TextColor="#666666" />
+
+                <!--  Descripción del evento  -->
+                <Label
+                    FontSize="Medium"
+                    Text="Descripción"
+                    TextColor="#184159" />
+                <Editor
+                    HeightRequest="60"
+                    Placeholder="Ingrese la descripción del evento"
+                    PlaceholderColor="#666666"
+                    Text="{Binding UpdatedEventItem.Description}"
+                    TextColor="#666666" />
+
+                <!--  Fecha del evento  -->
+                <Label
+                    FontSize="Medium"
+                    Text="Fecha"
+                    TextColor="#184159" />
+                <DatePicker
+                    Date="{Binding UpdatedEventItem.Date}"
+                    Format="dd/MM/yyyy"
+                    TextColor="#666666" />
+
+                <!--  Zona horaria del evento  -->
+                <Label
+                    FontSize="Medium"
+                    Text="Zona Horaria"
+                    TextColor="#184159" />
+                <Picker
+                    Title="Seleccione una zona horaria"
+                    ItemsSource="{Binding Zones}"
+                    SelectedItem="{Binding SelectedZone, Mode=TwoWay}"
+                    TextColor="#666666"
+                    TitleColor="#666666" />
+                <StackLayout
+                    HorizontalOptions="FillAndExpand"
+                    Orientation="Horizontal"
+                    Spacing="70">
+                    <StackLayout>
+                        <!--  Hora de inicio del evento  -->
+                        <Label
+                            FontSize="Medium"
+                            Text="Hora de inicio"
+                            TextColor="#184159" />
+                        <TimePicker TextColor="#666666" Time="{Binding StartTime}" />
+                    </StackLayout>
+                    <StackLayout>
+                        <!--  Hora de fin del evento  -->
+                        <Label
+                            FontSize="Medium"
+                            Text="Hora de fin"
+                            TextColor="#184159" />
+                        <TimePicker TextColor="#666666" Time="{Binding EndTime}" />
+                    </StackLayout>
+                </StackLayout>
+
+
+                <!--  Botón para agregar el evento  -->
+
+                <Button VerticalOptions="EndAndExpand"
+                    Margin="0,40,0,10"
+                    BackgroundColor="#419387"
+                    Clicked="Button_Clicked_Update"
+                    CornerRadius="20"
+                    Text="Guardar edición"
+                    TextColor="White" />
+
+                <Button
+                    BackgroundColor="#D2E898"
+                    Command="{Binding CancelUpdateViewCommand}"
+                    CornerRadius="20"
+                    Text="Volver"
+                    TextColor="#205048" />
+            </StackLayout>
+        </StackLayout>
+    </StackLayout>
 
 </pages:BaseContentPage>
