--- a/App/Eventos/Pages/HistoryPage.xaml
+++ b/App/Eventos/Pages/HistoryPage.xaml
@@ -18,90 +18,131 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <ScrollView>
-        <StackLayout>
-            <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
-            <Button
-                Margin="20"
-                Command="{Binding RefreshAsyncCommand}"
-                IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
-                Text="Recargar"
-                WidthRequest="100" />
+    <StackLayout BackgroundColor="#DDDDDD">
+        <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
+
+        <Border
+            Padding="20"
+            BackgroundColor="#184159"
+            Stroke="#184159"
+            StrokeThickness="1">
+            <Border.StrokeShape>
+                <RoundRectangle CornerRadius="0,0,30,30" />
+            </Border.StrokeShape>
+            <Image Source="recuerdame_white.svg" />
+        </Border>
+
+
+        <RefreshView Command="{Binding RefreshAsyncCommand}" IsRefreshing="{Binding IsRefreshingList}">
             <CollectionView
-                Margin="10"
-                BackgroundColor="Transparent"
-                IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
-                ItemsSource="{Binding Source={RelativeSource AncestorType={x:Type viewModels:HistoryViewModel}}, Path=Events}">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="models:EventItem">
-                        <StackLayout>
-                            <Grid
-                                Margin="10,0,10,0"
-                                ColumnDefinitions="*,*"
+            Margin="10"
+            BackgroundColor="Transparent"
+            IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
+            ItemsSource="{Binding Source={RelativeSource AncestorType={x:Type viewModels:HistoryViewModel}}, Path=Events, Mode=TwoWay}"
+            VerticalOptions="FillAndExpand">
+            <CollectionView.ItemsLayout>
+                <GridItemsLayout Orientation="Vertical" />
+            </CollectionView.ItemsLayout>
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="models:EventItem">
+                    <Frame Margin="9" BorderColor="Transparent">
+                        <Frame.Shadow>
+                            <Shadow
+                                Brush="#000000"
+                                Opacity="0.5"
+                                Radius="15"
+                                Offset="-4,4" />
+                        </Frame.Shadow>
+                        <Grid
+                            ColumnDefinitions="auto,*"
+                            HorizontalOptions="FillAndExpand"
+                            RowDefinitions="auto,auto"
+                            RowSpacing="3"
+                            VerticalOptions="Start">
+
+                            <Label
                                 HorizontalOptions="FillAndExpand"
-                                RowDefinitions="auto,auto"
-                                RowSpacing="10"
-                                VerticalOptions="Start">
+                                Grid.Row="0"
+                                Grid.Column="0"
+                                MaxLines="1"
+                                FontAttributes="Bold"
+                                TextColor="#61a60e">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span
+                                            FontSize="22"
+                                            Text="{Binding Title}"
+                                            TextColor="#184159" />
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
 
+                            <StackLayout
+                                Grid.Row="1"
+                                Grid.Column="0"
+                                Orientation="Vertical">
                                 <Label
-                                    Grid.Row="0"
-                                    Grid.Column="0"
+                                    Margin="0,0,0,5"
+                                    MaxLines="1"
+                                    Text="{Binding Description}"
+                                    TextColor="#184159"
+                                    VerticalOptions="Start" />
+                                <Label
                                     Margin="0,0,6,0"
                                     FontAttributes="Bold"
-                                    TextColor="#61a60e">
+                                    FontSize="14"
+                                    TextColor="#184159">
                                     <Label.FormattedText>
                                         <FormattedString>
-                                            <Span Text="Titulo: " />
-                                            <Span Text="{Binding Title}" TextColor="White" />
-                                        </FormattedString>
-                                    </Label.FormattedText>
-                                </Label>
-
-                                <Label
-                                    Grid.Row="1"
-                                    Grid.Column="0"
-                                    Margin="0,0,6,0"
-                                    FontAttributes="Bold"
-                                    TextColor="#61a60e">
-                                    <Label.FormattedText>
-                                        <FormattedString>
-                                            <Span Text="`Clicks: " />
                                             <Span Text="{Binding Count}" />
+                                            <Span Text=" clicks " />
                                         </FormattedString>
                                     </Label.FormattedText>
                                 </Label>
+                            </StackLayout>
 
 
-                                <Button
-                                    Grid.Row="0"
-                                    Grid.Column="1"
-                                    Margin="0,0,6,0"
-                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewModels:HistoryViewModel}}, Path=CopyTextAsyncCommand}"
-                                    CommandParameter="{Binding URLFile}"
-                                    FontAttributes="Bold"
-                                    Text="Link"
-                                    TextColor="#61a60e" />
-                            </Grid>
-                            <BoxView
-                                Grid.Row="3"
-                                Margin="10"
-                                HeightRequest="0.5"
-                                HorizontalOptions="Fill"
-                                Color="#61a60e" />
-                        </StackLayout>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-                <CollectionView.EmptyView>
-                    <Label
-                        FontSize="20"
-                        HorizontalOptions="Center"
-                        Text="No hay eventos"
-                        TextColor="#61a60e"
-                        VerticalOptions="CenterAndExpand" />
-                </CollectionView.EmptyView>
-            </CollectionView>
-        </StackLayout>
+                            <ImageButton
+                                Grid.Row="0"
+                                Grid.Column="1"
+                                Margin="0,0,6,0"
+                                Padding="10"
+                                BackgroundColor="#D2E898"
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type viewModels:HistoryViewModel}}, Path=CopyTextAsyncCommand}"
+                                CommandParameter="{Binding URLFile}"
+                                CornerRadius="100"
+                                HeightRequest="40"
+                                HorizontalOptions="End"
+                                Source="link.svg"
+                                WidthRequest="40" />
 
-    </ScrollView>
+                            <ImageButton
+                                Grid.Row="1"
+                                Grid.Column="1"
+                                Margin="0,0,6,0"
+                                Padding="10"
+                                BackgroundColor="#D2E898"
+                                Clicked="ImageButton_Clicked"
+                                CornerRadius="100"
+                                HeightRequest="40"
+                                HorizontalOptions="End"
+                                Source="eye"
+                                VerticalOptions="End"
+                                WidthRequest="40" />
+                        </Grid>
+                    </Frame>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+            <CollectionView.EmptyView>
+                <Label
+                    FontSize="20"
+                    HorizontalOptions="Center"
+                    Text="No hay eventos"
+                    TextColor="#61a60e"
+                    VerticalOptions="CenterAndExpand" />
+            </CollectionView.EmptyView>
+        </CollectionView>
+        </RefreshView>
+    </StackLayout>
 
 </pages:BaseContentPage>
