--- a/App/Eventos/Pages/SettingsPage.xaml
+++ b/App/Eventos/Pages/SettingsPage.xaml
@@ -4,11 +4,18 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:extensions="clr-namespace:Eventos.Extensions"
+    xmlns:local="clr-namespace:Eventos.Converters"
     xmlns:pages="clr-namespace:Eventos.Common.Pages;assembly=Eventos.Common"
     xmlns:viewModels="clr-namespace:Eventos.ViewModels"
     x:DataType="viewModels:SettingsViewModel"
     x:TypeArguments="viewModels:SettingsViewModel"
     Shell.NavBarIsVisible="False">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
     <StackLayout BackgroundColor="White">
         <Border
@@ -21,16 +28,18 @@
             </Border.StrokeShape>
             <Image Source="recuerdame_white.svg" />
         </Border>
+
+        <ActivityIndicator
+            HeightRequest="32"
+            IsRunning="True"
+            IsVisible="{Binding IsBusy}"
+            VerticalOptions="Center"
+            WidthRequest="32" />
         <StackLayout
             Padding="30,0"
+            IsVisible="{Binding IsBusy,Converter={StaticResource InvertedBoolConverter}}"
             Spacing="25"
             VerticalOptions="FillAndExpand">
-
-            <ActivityIndicator
-                HeightRequest="32"
-                IsRunning="True"
-                IsVisible="{Binding IsBusy}"
-                WidthRequest="32" />
 
             <Button
                 Margin="0,10,0,40"
