--- a/App/Eventos/Pages/SettingsPage.xaml
+++ b/App/Eventos/Pages/SettingsPage.xaml
@@ -41,6 +41,86 @@
             Spacing="25"
             VerticalOptions="FillAndExpand">
 
+            <Label
+                Margin="0,20,0,0"
+                FontAttributes="Bold"
+                FontSize="20"
+                Text="Cuenta:"
+                TextColor="#184159" />
+
+
+            <Label
+                Margin="25,0,0,0"
+                HorizontalOptions="FillAndExpand"
+                MaxLines="1">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span
+                            FontSize="16"
+                            Text="- "
+                            TextColor="#184159" />
+                        <Span
+                            FontSize="16"
+                            Text="{Binding User.Email}"
+                            TextColor="#184159" />
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+
+
+            <Label
+                Margin="25,0,0,0"
+                HorizontalOptions="FillAndExpand"
+                MaxLines="1">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span
+                            FontSize="16"
+                            Text="- "
+                            TextColor="#184159" />
+                        <Span
+                            FontSize="16"
+                            Text="{Binding User.Plan}"
+                            TextColor="#184159" />
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+            <Label
+                Margin="25,0,0,0"
+                HorizontalOptions="FillAndExpand"
+                MaxLines="1">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span
+                            FontSize="16"
+                            Text="- Estado: "
+                            TextColor="#184159" />
+                        <Span
+                            FontSize="16"
+                            Text="{Binding User.State}"
+                            TextColor="#184159" />
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+
+            <Label
+                Margin="25,0,0,0"
+                HorizontalOptions="FillAndExpand"
+                MaxLines="1">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span
+                            FontSize="16"
+                            Text="- Proximo vencimiento "
+                            TextColor="#184159" />
+                        <Span
+                            FontSize="16"
+                            Text="{Binding User.PlanInfo}"
+                            TextColor="#184159" />
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+
             <Button
                 Margin="0,10,0,40"
                 BackgroundColor="#419387"
