--- a/App/Eventos/Pages/AddEventPage.xaml
+++ b/App/Eventos/Pages/AddEventPage.xaml
@@ -36,7 +36,7 @@
                     Margin="0,0,0,20"
                     FontSize="Title"
                     Text="Crear nuevo evento"
-                    TextColor="#D2E898" />
+                    TextColor="#ABBA3C" />
 
                 <!--  Título del evento  -->
                 <Label
