--- a/App/Eventos/Pages/HomePage.xaml
+++ b/App/Eventos/Pages/HomePage.xaml
@@ -18,49 +18,44 @@
     </ContentPage.Resources>
 
     <StackLayout BackgroundColor="#DDDDDD">
-        <StackLayout>
-            <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
-            <StackLayout
-                IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
-                Spacing="010"
-                VerticalOptions="Center">
-
-                <Border
-                    Padding="20"
-                    BackgroundColor="#184159"
-                    Stroke="#184159"
-                    StrokeThickness="1">
-                    <Border.StrokeShape>
-                        <RoundRectangle CornerRadius="0,0,30,30" />
-                    </Border.StrokeShape>
-                    <Image Source="recuerdame_white.svg" />
-                </Border>
-
-                <Label
-                    Grid.Row="0"
-                    Grid.Column="0"
-                    Margin="20,0,0,0"
-                    FontAttributes="Bold"
-                    HorizontalOptions="FillAndExpand"
-                    MaxLines="1">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <Span
-                                FontSize="22"
-                                Text="Hola "
-                                TextColor="#184159" />
-                            <Span
-                                FontSize="22"
-                                Text="{Binding User.FullName}"
-                                TextColor="#184159" />
-                            <Span
-                                FontSize="22"
-                                Text="!"
-                                TextColor="#184159" />
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
+        <Border
+            Padding="20"
+            BackgroundColor="#184159"
+            Stroke="#184159"
+            StrokeThickness="1">
+            <Border.StrokeShape>
+                <RoundRectangle CornerRadius="0,0,30,30" />
+            </Border.StrokeShape>
+            <Image Source="recuerdame_white.svg" />
+        </Border>
+        <RefreshView Command="{Binding LoadDataCommand}" IsRefreshing="{Binding IsRefreshingList}">
+            <ScrollView VerticalOptions="FillAndExpand">
                 <StackLayout HorizontalOptions="FillAndExpand">
+                    <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
+                    <Label
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Margin="20,20,0,0"
+                        FontAttributes="Bold"
+                        HorizontalOptions="FillAndExpand"
+                        MaxLines="1">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span
+                                    FontSize="22"
+                                    Text="Hola "
+                                    TextColor="#184159" />
+                                <Span
+                                    FontSize="22"
+                                    Text="{Binding User.FullName}"
+                                    TextColor="#184159" />
+                                <Span
+                                    FontSize="22"
+                                    Text="!"
+                                    TextColor="#184159" />
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
                     <Grid Margin="20,0,0,0">
 
                         <!--  Contenedor con un fondo y bordes redondeados  -->
@@ -96,7 +91,6 @@
                         </Frame>
 
                     </Grid>
-
                     <Label
                         Grid.Row="0"
                         Grid.Column="0"
@@ -126,11 +120,8 @@
                         </Label.FormattedText>
                     </Label>
                 </StackLayout>
-
-                <Button Command="{Binding LoadDataCommand}" Text="refresh"/>
-            </StackLayout>
-        </StackLayout>
-
+            </ScrollView>
+        </RefreshView>
     </StackLayout>
 
 </pages:BaseContentPage>
