--- a/App/Eventos/Pages/AddEventPage.xaml
+++ b/App/Eventos/Pages/AddEventPage.xaml
@@ -17,20 +17,24 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <StackLayout BackgroundColor="#DDDDDD">
-        <Border
-            Padding="20"
-            BackgroundColor="#184159"
-            Stroke="#184159"
-            StrokeThickness="1">
-            <Border.StrokeShape>
-                <RoundRectangle CornerRadius="0,0,30,30" />
-            </Border.StrokeShape>
-            <Image Source="recuerdame_white.svg" />
-        </Border>
-        <StackLayout Margin="20" Spacing="15">
+    <StackLayout BackgroundColor="#184159">
+        <StackLayout BackgroundColor="#DDDDDD">
+            <Border
+                Margin="0,-10,0,0"
+                Padding="20"
+                BackgroundColor="#184159"
+                Stroke="#184159"
+                StrokeThickness="1">
+                <Border.StrokeShape>
+                    <RoundRectangle CornerRadius="0,0,30,30" />
+                </Border.StrokeShape>
+                <Image Source="recuerdame_white" />
+            </Border>
+        </StackLayout>
+        
+        <StackLayout Margin="0" Spacing="15" BackgroundColor="#DDDDDD" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
             <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
-            <StackLayout IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}">
+            <StackLayout Margin="20,20,20,20"  IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}">
 
                 <Label
                     Margin="0,0,0,20"
@@ -115,19 +119,35 @@
                 <!--  Botón para agregar el evento  -->
 
                 <Button
-                    Margin="0,40,0,10"
+                    Margin="0,40,0,15"
                     BackgroundColor="#419387"
                     Command="{Binding AddEventCommand}"
                     CornerRadius="20"
                     Text="Guardar evento"
-                    TextColor="White" />
+                    TextColor="White" >
+                    <Button.Shadow>
+                        <Shadow
+                            Brush="#000000"
+                            Opacity="0.5"
+                            Radius="4"
+                            Offset="0,3" />
+                    </Button.Shadow>
+                    </Button>
 
                 <Button
                     BackgroundColor="#D2E898"
                     Command="{Binding ClearCommand}"
                     CornerRadius="20"
                     Text="Cancelar"
-                    TextColor="#205048" />
+                    TextColor="#205048" >
+                    <Button.Shadow>
+                        <Shadow
+                            Brush="#000000"
+                            Opacity="0.5"
+                            Radius="4"
+                            Offset="0,3" />
+                    </Button.Shadow>
+                    </Button>
             </StackLayout>
         </StackLayout>
     </StackLayout>
