--- a/App/Eventos/Pages/EventDetailPage.xaml
+++ b/App/Eventos/Pages/EventDetailPage.xaml
@@ -20,20 +20,27 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <StackLayout BackgroundColor="White">
+    <StackLayout BackgroundColor="#184159">
+        <StackLayout BackgroundColor="#DDDDDD">
         <Border
-            Padding="20"
-            BackgroundColor="#184159"
-            Stroke="#184159"
-            StrokeThickness="1">
-            <Border.StrokeShape>
-                <RoundRectangle CornerRadius="0,0,30,30" />
-            </Border.StrokeShape>
-            <Image Source="recuerdame_white.svg" />
-        </Border>
+                Margin="0,-10,0,0"
+                Padding="20"
+                BackgroundColor="#184159"
+                Stroke="#184159"
+                StrokeThickness="1">
+                <Border.StrokeShape>
+                    <RoundRectangle CornerRadius="0,0,30,30" />
+                </Border.StrokeShape>
+                <Image Source="recuerdame_white" />
+            </Border>
+        </StackLayout>
+        
 
         <StackLayout
-            Margin="20,20,20,0"
+            Margin="0,0,0,0"
+            Padding="20,20,20,20"
+            BackgroundColor="#DDDDDD" 
+            HorizontalOptions="FillAndExpand"
             IsVisible="{Binding UpdateView, Converter={StaticResource InvertedBoolConverter}}"
             VerticalOptions="FillAndExpand">
             <StackLayout
@@ -44,17 +51,21 @@
                     Margin="0,0,0,20"
                     FontSize="24"
                     Text="Detalles del evento"
-                    TextColor="#D2E898" />
+                    TextColor="#ABBA3C" />
                 <ImageButton
-                    Margin="0,0,0,0"
-                    Padding="10"
-                    BackgroundColor="#D2E898"
                     Command="{Binding ActiveUpdateEventCommand}"
-                    CornerRadius="100"
-                    HeightRequest="40"
+                    HeightRequest="50"
                     HorizontalOptions="EndAndExpand"
-                    Source="pen.svg"
-                    WidthRequest="40" />
+                    Source="pen"
+                    WidthRequest="50" >
+                    <ImageButton.Shadow>
+                        <Shadow
+                            Brush="#000000"
+                            Opacity="0.5"
+                            Radius="4"
+                            Offset="0,3" />
+                    </ImageButton.Shadow>
+                    </ImageButton>
             </StackLayout>
 
             <Label
@@ -141,25 +152,33 @@
                     CornerRadius="20"
                     HorizontalOptions="FillAndExpand"
                     Text="Volver"
-                    TextColor="#184159" />
+                    TextColor="#184159" >
+                    <Button.Shadow>
+                        <Shadow
+                            Brush="#000000"
+                            Opacity="0.5"
+                            Radius="4"
+                            Offset="0,3" />
+                    </Button.Shadow>
+                    </Button>
                 <ImageButton
-                    Margin="0,10,0,10"
-                    Padding="6"
-                    BackgroundColor="#D2E898"
+                    VerticalOptions="CenterAndExpand"
                     Clicked="Button_Clicked_Delete"
                     CommandParameter="delete"
-                    CornerRadius="100"
-                    HeightRequest="40"
-                    Source="trash.svg"
-                    WidthRequest="60" />
+                    HeightRequest="50"
+                    Source="trash"
+                    WidthRequest="70" />
             </StackLayout>
 
         </StackLayout>
 
         <StackLayout
-            Margin="20"
+            Margin="0,0,0,0"
+            Padding="20,20,20,20"
+            BackgroundColor="#DDDDDD" 
             IsVisible="{Binding UpdateView}"
             Spacing="15"
+            HorizontalOptions="FillAndExpand"
             VerticalOptions="FillAndExpand">
             <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
             <StackLayout IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}" VerticalOptions="FillAndExpand">
@@ -168,7 +187,7 @@
                     Margin="0,0,0,20"
                     FontSize="Title"
                     Text="Detalles del evento"
-                    TextColor="#D2E898" />
+                    TextColor="#ABBA3C" />
 
                 <!--  Título del evento  -->
                 <Label
@@ -251,20 +270,36 @@
                 <!--  Botón para agregar el evento  -->
 
                 <Button
-                    Margin="0,40,0,10"
+                    Margin="0,40,0,15"
                     BackgroundColor="#419387"
                     Clicked="Button_Clicked_Update"
                     CornerRadius="20"
                     Text="Guardar edición"
                     TextColor="White"
-                    VerticalOptions="EndAndExpand" />
+                    VerticalOptions="EndAndExpand" >
+                    <Button.Shadow>
+                        <Shadow
+                            Brush="#000000"
+                            Opacity="0.5"
+                            Radius="4"
+                            Offset="0,3" />
+                    </Button.Shadow>
+                    </Button>
 
                 <Button
                     BackgroundColor="#D2E898"
                     Command="{Binding CancelUpdateViewCommand}"
                     CornerRadius="20"
                     Text="Volver"
-                    TextColor="#205048" />
+                    TextColor="#205048" >
+                    <Button.Shadow>
+                        <Shadow
+                            Brush="#000000"
+                            Opacity="0.5"
+                            Radius="4"
+                            Offset="0,3" />
+                    </Button.Shadow>
+                    </Button>
             </StackLayout>
         </StackLayout>
     </StackLayout>
