--- a/App/Eventos/Pages/HistoryPage.xaml
+++ b/App/Eventos/Pages/HistoryPage.xaml
@@ -18,34 +18,37 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <StackLayout BackgroundColor="#DDDDDD">
+    <StackLayout BackgroundColor="#184159">
         <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
-
-        <Border
-            Padding="20"
-            BackgroundColor="#184159"
-            Stroke="#184159"
-            StrokeThickness="1">
-            <Border.StrokeShape>
-                <RoundRectangle CornerRadius="0,0,30,30" />
-            </Border.StrokeShape>
-            <Image Source="recuerdame_white.svg" />
-        </Border>
-
-
+        <StackLayout BackgroundColor="#DDDDDD" Padding="0,0,0,10">
+            <Border
+                Margin="0,-10,0,0"
+                Padding="20"
+                BackgroundColor="#184159"
+                Stroke="#184159"
+                StrokeThickness="1">
+                <Border.StrokeShape>
+                    <RoundRectangle CornerRadius="0,0,30,30" />
+                    </Border.StrokeShape>
+                    <Image Source="recuerdame_white" />
+            </Border>
+        </StackLayout>
+        
         <RefreshView Command="{Binding RefreshAsyncCommand}" IsRefreshing="{Binding IsRefreshingList}">
-            <CollectionView
-                Margin="10"
-                BackgroundColor="Transparent"
+            <StackLayout Padding="0,0,0,0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="#DDDDDD">
+                <CollectionView
+                Margin="20,0,20,0"
+                HorizontalOptions="FillAndExpand"
+                BackgroundColor="#DDDDDD"
                 IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
                 ItemsSource="{Binding Source={RelativeSource AncestorType={x:Type viewModels:HistoryViewModel}}, Path=Events, Mode=TwoWay}"
                 VerticalOptions="FillAndExpand">
                 <CollectionView.ItemsLayout>
-                    <GridItemsLayout Orientation="Vertical" />
+                    <GridItemsLayout Orientation="Vertical" VerticalItemSpacing="10"/>
                 </CollectionView.ItemsLayout>
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="models:EventItem">
-                        <Frame Margin="9" BorderColor="Transparent">
+                        <Frame Margin="0,10,0,0" BorderColor="Transparent">
                             <Frame.Shadow>
                                 <Shadow
                                     Brush="#000000"
@@ -106,29 +109,23 @@
                                     Grid.Row="0"
                                     Grid.Column="1"
                                     Margin="0,0,6,0"
-                                    Padding="10"
-                                    BackgroundColor="#D2E898"
                                     Command="{Binding Source={RelativeSource AncestorType={x:Type viewModels:HistoryViewModel}}, Path=CopyTextAsyncCommand}"
                                     CommandParameter="{Binding URLFile}"
-                                    CornerRadius="100"
-                                    HeightRequest="40"
+                                    HeightRequest="45"
                                     HorizontalOptions="End"
-                                    Source="link.svg"
-                                    WidthRequest="40" />
+                                    Source="link"
+                                    WidthRequest="45" />
 
                                 <ImageButton
                                     Grid.Row="1"
                                     Grid.Column="1"
                                     Margin="0,0,6,0"
-                                    Padding="10"
-                                    BackgroundColor="#D2E898"
                                     Clicked="ImageButton_Clicked"
-                                    CornerRadius="100"
-                                    HeightRequest="40"
+                                    HeightRequest="45"
                                     HorizontalOptions="End"
                                     Source="eye"
                                     VerticalOptions="End"
-                                    WidthRequest="40" />
+                                    WidthRequest="45" />
                             </Grid>
                         </Frame>
                     </DataTemplate>
@@ -142,6 +139,8 @@
                         VerticalOptions="CenterAndExpand" />
                 </CollectionView.EmptyView>
             </CollectionView>
+            </StackLayout>
+            
         </RefreshView>
     </StackLayout>
 
