--- a/App/Eventos/Pages/SettingsPage.xaml
+++ b/App/Eventos/Pages/SettingsPage.xaml
@@ -17,17 +17,21 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <StackLayout BackgroundColor="#DDDDDD">
-        <Border
-            Padding="20"
-            BackgroundColor="#184159"
-            Stroke="#184159"
-            StrokeThickness="1">
-            <Border.StrokeShape>
-                <RoundRectangle CornerRadius="0,0,30,30" />
-            </Border.StrokeShape>
-            <Image Source="recuerdame_white.svg" />
-        </Border>
+    <StackLayout BackgroundColor="#184159">
+        <StackLayout BackgroundColor="#DDDDDD">
+           <Border
+            Margin="0,-10,0,0"
+                Padding="20"
+                BackgroundColor="#184159"
+                Stroke="#184159"
+                StrokeThickness="1">
+                <Border.StrokeShape>
+                    <RoundRectangle CornerRadius="0,0,30,30" />
+                </Border.StrokeShape>
+                <Image Source="recuerdame_white" />
+            </Border>
+        </StackLayout>
+       
 
         <ActivityIndicator
             HeightRequest="32"
@@ -36,6 +40,7 @@
             VerticalOptions="Center"
             WidthRequest="32" />
         <StackLayout
+            BackgroundColor="#DDDDDD"
             Padding="30,0"
             IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
             Spacing="25"
@@ -128,7 +133,15 @@
                 CornerRadius="20"
                 Text="Cerrar sesion"
                 TextColor="White"
-                VerticalOptions="EndAndExpand" />
+                VerticalOptions="EndAndExpand" >
+                <Button.Shadow>
+                        <Shadow
+                            Brush="#000000"
+                            Opacity="0.6"
+                            Radius="4"
+                            Offset="0,3" />
+                    </Button.Shadow>
+                </Button>
 
         </StackLayout>
     </StackLayout>
